create UserConroller with annotations
